# nextcloud-mcp-server

./: .pre-commit-config.yaml  GUIDANCE.md  PROGRESS.md  README.md  codecov.yml  pyproject.toml
.github/: ci-fpm-pool.conf  ci-nginx.conf  docker-compose.ci.yml  fpm-ci.conf  nginx.conf  zzz-ci-perf.ini
.github/workflows/: ci.yml  lint.yml  publish.yml  tests-integration.yml  tests-unit.yml
scripts/: seed_pagination_data.py
src/nc_mcp_server/: __init__.py  __main__.py  client.py  config.py  permissions.py  server.py  state.py
src/nc_mcp_server/tools/: __init__.py  activity.py  announcements.py  app_management.py  calendar.py  circles.py  collectives.py  comments.py  contacts.py  cospend.py  files.py  forms.py  mail.py  search.py  shares.py  system_tags.py  talk.py  tasks.py  trashbin.py  versions.py
src/nextcloud_mcp/: annotations.py  client.py  server.py
src/nextcloud_mcp/tools/: activity.py  comments.py  files.py  notifications.py  shares.py  talk.py  trashbin.py  user_status.py  users.py
tests/: test_client_errors.py  test_client_retry.py  test_client_stream.py  test_config.py  test_files_helpers.py  test_permissions.py  test_state.py
tests/integration/: conftest.py  test_activity.py  test_app_management.py  test_calendar.py  test_circles.py  test_collectives.py  test_comments.py  test_contacts.py  test_cospend.py  test_errors.py  test_files.py  test_forms.py  test_mail.py  test_notifications.py  test_pagination.py  test_permissions.py  test_server.py  test_session_cache.py  test_shares.py  test_system_tags.py  test_talk.py  test_talk_polls.py  test_tasks.py  test_trashbin.py  test_user_permissions.py  test_user_status.py  test_versions.py
