[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68" ]

[project]
name = "nc-mcp-server"
version = "0.4.0"
description = "MCP server for Nextcloud — expose Nextcloud APIs as AI-usable tools"
readme = "README.md"
keywords = [ "ai", "mcp", "model-context-protocol", "nextcloud" ]
license = "MIT"
authors = [
  { name = "Alexander Piskun", email = "bigcat88@icloud.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "icalendar>=7",
  "mcp[cli]>=1.20",
  "niquests>=3",
]
optional-dependencies.dev = [
  "black",
  "isort",
  "pre-commit",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
  "ruff>=0.8",
]
scripts.nc-mcp-server = "nc_mcp_server.__main__:main"

[tool.setuptools]
packages.find.where = [ "src" ]

[tool.black]
line-length = 120
preview = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FLY",
  "FURB",
  "G",
  "I",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.extend-ignore = [
  "I001",
  "PLR0913",
  "PLR2004",
  "PLW0603",
  "S311",
  "S603",
  "SIM117",
  "TRY003",
]
lint.extend-per-file-ignores."scripts/**/*.py" = [ "S314", "T201" ]
lint.extend-per-file-ignores."src/nc_mcp_server/client.py" = [ "S314" ]
lint.extend-per-file-ignores."src/nc_mcp_server/config.py" = [ "S104" ]
lint.extend-per-file-ignores."tests/**/*.py" = [ "E402", "S", "UP" ]

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = "venv"
reportUnusedFunction = false
reportPrivateUsage = false
executionEnvironments = [
  { root = "tests/test_client_retry.py", reportAttributeAccessIssue = false, reportUnknownMemberType = false },
  { root = "src/nc_mcp_server/tools/calendar.py", reportUnknownMemberType = false, reportUnknownVariableType = false, reportUnknownArgumentType = false },
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
ini_options.markers = [
  "integration: marks tests that require a running Nextcloud instance",
]
